# ebse

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html
.devcontainer/: devcontainer.json  docker-compose.yml
compilation pipeline/: .gitignore  compile_pipeline.py  ping_pom.py  pipeline_non_java.ipynb  repositories.csv
compilation pipeline/data/: all_repositories.csv  all_repositories_batch_1.csv  all_repositories_batch_2.csv  all_repositories_batch_3.csv  test_repositories.csv
compilation pipeline/old/: pipeline.ipynb
scripts/: requirements.txt
scripts/compilation pipeline/: extract_commit_hashes.py  pipeline_non_java.ipynb
scripts/compilation pipeline/data/: all_repositories_batch_2.csv
scripts/compilation pipeline/old/: analysis-run.sh
scripts/compilation pipeline/results/: issues-airflow.json  issues-apisix-dashboard.json  issues-arrow.json  issues-bigtop.json  issues-carbondata.json  issues-cloudstack-documentation.json  issues-cloudstack-primate.json  issues-cordova-plugin-camera.json  issues-cordova-plugin-file.json  issues-cordova-plugin-inappbrowser.json  issues-cordova-plugin-media.json  issues-couchdb.json  (+36 more)
scripts/data_cleaning/: Dockerfile  clean_dataset.py  get_repository_info.py  main.py  pyproject.toml  repositories.txt  show_satd_distribution.py
scripts/extract_satd_commits/: commits_33884891.txt  extract_commit_hashes.py
scripts/issue_satd_matching/: CountSATDPerRepo.py  GitSATDLineNumbers.py  TextualSimilarity.py
scripts/satd_commit_pipeline/: pipeline.py
scripts/satd_tracing/: GitSATDLineNumbers.py
(+798 files in other folders)
